Figure out the schedule when entering through shortcut

BUG: 506454
FIXED-IN: 5.2.1
(cherry picked from commit 832128ca75d5ad9e15a86ebf3ae59afae9a01c22)